[package]
name = "quadim"
version = "0.1.1"
edition = "2021"

description = "Fastest image quadtree stylization implementation to date, capable of hundreds of fps and avoiding ugly non-squares."

documentation = "https://docs.rs/quadim"
repository = "https://github.com/eternal-io/quadim"
license = "MIT OR Apache-2.0"
readme = "CRATES.IO-README.md"

keywords = ["quadtree", "image", "stylized", "pixel", "art"]
categories = [
    "algorithms",
    "computer-vision",
    "command-line-utilities",
    "multimedia::images",
    "visualization",
]

exclude = ["img/**", "*.md", "!CRATES.IO-README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies.rhai]
# version = "1.14.0"
# features = [
#     "sync",
#     "no_time",
#     "no_object",
#     "no_closure",
#     "no_custom_syntax",
#     "only_i64",
#     "f32_float",
# ]

[dependencies]
image = "0.24.6"
imageproc = "0.23.0"
nalgebra = "0.32.2"
csscolorparser = "0.6.2"
thiserror = "1.0.40"

clap = { version = "4.2.7", features = ["derive"], optional = true }
num_cpus = { version = "1.15.0", optional = true }
threadpool = { version = "1.8.1", optional = true }
object-pool = { version = "0.5.4", optional = true }

src-dst-clarifier = { version = "~0.2.0", optional = true }


[features]
build-bin = [
    "clap",
    "num_cpus",
    "threadpool",
    "object-pool",
    "src-dst-clarifier",
]

[[bin]]
name = "quadim"
required-features = ["build-bin"]


[profile.dev]
opt-level = 1
overflow-checks = false
