[package]
name = "quadim-core"
version = "0.1.1"
edition = "2021"
description = "Core quadtree analysis and rendering logic for quadim"
repository = "https://github.com/eternal-io/quadim"
license = "MIT OR Apache-2.0"
readme = "../CRATES.IO-README.md"
documentation = "https://docs.rs/quadim-core"

[dependencies]
image = "0.24.6"
imageproc = "0.23.0"
nalgebra = "0.32.2"
thiserror = "1.0.40"
csscolorparser = "0.6.2"
clap               = { version = "4.2.7", features = ["derive"], optional = true }

[lib]
name = "quadim_core"
path = "src/lib.rs"