[package]
name = "quadim"
version = "0.1.1"
edition = "2021"
description = "CLI binary for quadim"
repository = "https://github.com/eternal-io/quadim"
license = "MIT OR Apache-2.0"
readme = "../CRATES.IO-README.md"
documentation = "https://docs.rs/quadim"

[dependencies]
quadim-core        = { path = "../quadim-core", features = ["clap"] }
image               = "0.24.6"
csscolorparser      = "0.6.2"

clap               = { version = "4.2.7", features = ["derive"], optional = true }
src-dst-clarifier  = { version = "~0.2.0", optional = true }
num_cpus           = { version = "1.15.0", optional = true }
threadpool         = { version = "1.8.1", optional = true }
object-pool        = { version = "0.5.4", optional = true }

[features]
build-bin = [
  "clap",
  "src-dst-clarifier",
  "num_cpus",
  "threadpool",
  "object-pool",
]

[[bin]]
name = "quadim"
path = "src/main.rs"
required-features = ["build-bin"]